Bug 171947 - kmail problem with sending iso-8859-1
Summary: kmail problem with sending iso-8859-1
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-01 10:28 UTC by Martin Schlander
Modified: 2008-10-02 18:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schlander 2008-10-01 10:28:20 UTC
Version:            (using KDE 4.1.1)
OS:                Linux
Installed from:    SuSE RPMs

I sent an email in iso-8859-1 charset, and got reports back that Thunderbird couldn't read the email properly because the charset is set as 

Content-Type: text/plain; charset="iso 8859-1" 

It seems there's a dash missing, should be "iso-8859-1" I think. 

I assume other mail clients can't read these mails properly either, at least also the email archive for our LUG has problems with it:
See: http://sslug.dk/emailarkiv/announce/2008_09/msg00004.html

Incidentally, I previously had the exact same problem with KNode.
See https://bugs.kde.org/show_bug.cgi?id=169411
Comment 1 Thomas McGuire 2008-10-02 18:24:15 UTC
SVN commit 867007 by tmcguire:

Fix the charset name being "ISO 8859-xx" instead of "ISO-8859-xx".

This is because KCharsets::encodingForName() prefers to return something "human-readable" now,
thank you very much. I wonder why this worked in 3.5, the hypen seems to be missing there as well.
 The KCharsets code is too much magic to be understandable unfortunatley.

Apparently KMail has been sending invalid messages ever since 4.1 was released.
Urgh :(

I hope I didn't mix human- and machine-readable names anywhere, otherwise things will
break. This is also the reason I was too afraid to change this in kdelibs.

BUG: 171947