Fix the charset name being "ISO 8859-xx" instead of "ISO-8859-xx".

This is because KCharsets::encodingForName() prefers to return something "human-readable" now,
thank you very much. I wonder why this worked in 3.5, the hypen seems to be missing there as well.
 The KCharsets code is too much magic to be understandable unfortunatley.

Apparently KMail has been sending invalid messages ever since 4.1 was released.
Urgh :(

I hope I didn't mix human- and machine-readable names anywhere, otherwise things will
break. This is also the reason I was too afraid to change this in kdelibs.

BUG: 171947

svn path=/trunk/KDE/kdepim/; revision=867007